k8s/service.yaml
apiVersion: v1
kind: Service
metadata: { name: api-gateway, namespace: url-shortener }
spec:
  selector: { app: api-gateway }
  ports: [{ port: 80, targetPort: 9090 }]
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata: { name: auth-service, namespace: url-shortener }
spec:
  selector: { app: auth-service }
  ports: [{ port: 9091, targetPort: 9091 }]
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata: { name: shortener-service, namespace: url-shortener }
spec:
  selector: { app: shortener-service }
  ports: [{ port: 9092, targetPort: 9092 }]
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata: { name: analytics-consumer, namespace: url-shortener }
spec:
  selector: { app: analytics-consumer }
  ports: [{ port: 9093, targetPort: 9093 }]
  type: ClusterIP
